Fixes for Integer as a javascript and table fixes